<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<FrameLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/full_logo"/>

        <EditText
            android:id="@+id/et_email"
            style="@style/edtCustom"
            android:ems="10"
            android:hint="@string/etEmail"
            android:drawableLeft="@drawable/email_multiple"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/edtCustom"
            android:drawableLeft="@drawable/lock_check"
            android:ems="10"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/btnCustom"
            android:text="@string/str_login_in" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/mWhiteColor"
            android:background="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/str_sign_up"
            android:textAllCaps="false"/>
    </LinearLayout>

</FrameLayout>

</ScrollView>